Closed Bug 1012966 Opened 11 years ago Closed 11 years ago

[patch] Fix Typoes in Comments in IonBuilder.cpp

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: vstamour, Unassigned)

Details

Attachments

(1 file)

This patch fixes typoes in comments in IonBuilder.cpp. r? :shu
Attachment #8425122 - Flags: review?(shu)
Comment on attachment 8425122 [details] [diff] [review] 0001-Fix-typoes-in-comments-in-IonBuilder.cpp.patch Review of attachment 8425122 [details] [diff] [review]: ----------------------------------------------------------------- Thanks!
Attachment #8425122 - Flags: review?(shu) → review+
Keywords: checkin-needed
Note to sheriffs: patch only fixes comments; can push DONTBUILD
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: