Bug 1012966 - Fix typoes in comments in IonBuilder.cpp. r=shu